...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerTitle"
                        android:inputType="text"
                        android:digits="ABCDEFGHIJKLOMNPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerCompany"
                        android:inputType="textCapCharacters"
                        android:digits="ABCDEFGHIJKLOMNPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerCity"
                        android:inputType="text"
                        android:digits="ABCDEFGHIJKLOMNPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerState"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:maxLength="2"
                        android:textAllCaps="true"
                        android:inputType="textCapCharacters" />
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerIndex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:maxLength="3"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerSalary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerBonus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerRelocation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/offerStock"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
...
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="goMainMenu"
                    android:text="CANCEL" />

                <Button
                    android:id="@+id/saveButtonID"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="SAVE" />
...
